--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ GEMINI_API_KEY="AIzaSyCaoUV1Y9iVLGB0hQiY9y68qRWAT9d3O4o"
 MONGO_URI="mongodb+srv://branihat:runthebot@cluster0.uuaxm.mongodb.net/User?retryWrites=true&w=majority&appName=Cluster0"
 ADMIN_USERNAME=Vishnu
 ADMIN_PASSWORD=1234
+# In your .env file
+STRIPE_PUBLIC_KEY=your_stripe_public_key
+STRIPE_SECRET_KEY=your_stripe_secret_key
