--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ ADMIN_USERNAME=Vishnu
 ADMIN_PASSWORD=1234
 # In your .env file
 STRIPE_PUBLIC_KEY=your_stripe_public_key
-STRIPE_SECRET_KEY=your_stripe_secret_key
+STRIPE_SECRET_KEY=
