--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,8 @@ ADMIN_PASSWORD=admin_password_here
 # Stripe Configuration
 STRIPE_PUBLIC_KEY=your_stripe_public_key_here
 STRIPE_SECRET_KEY=your_stripe_secret_key_here
-
+STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
+STRIPE_PRICE_ID=your_stripe_price_id
 # Security
 SECRET_KEY=your_secret_key_here
 
